# index-tts

./: .biomeignore  .gitignore  AGENTS.md  README.md  benchmark_results.md  biome.json  check_fa.py  client_tts.py  implementation_plan.md  moshi_pipeline_design.md  package.json  pyproject.toml  run_baseline_server.sh  run_benchmark.sh  run_optimized_server.sh  run_server_test.py  rust_benchmark_results.txt  serve_tars.py  speaking-phrases-01.json  test_deterministic.jsonl  webui.py
.devcontainer/: devcontainer-lock.json  devcontainer.json
.gemini/: agent-state.json
.windsurf/: agent-state.json  update_plan.json
data/moshi_demo/: moshi_demo.jsonl
docs/: build_moshi_dataset_architecture.md
examples/: moshi_sample.jsonl
indextts/: cli.py  constants.py  core.py  infer.py  infer_v2.py  logging.py  types.py
indextts/gpt/: model.py  model_v2.py  transformers_gpt2.py  (+1 more)
scripts/: install_optimizations.sh
server/: Cargo.toml
server/src/: display.rs  main.rs  tts.rs
test_parity_deterministic/: mycooldataset.jsonl
tests/: benchmark_infer_v2.py  benchmark_server.py  debug_int8_devices.py  test_int8_quantization.py  test_int8_real_model.py  test_refactored_components.py  test_refactored_simple.py  test_rust_server.py  test_server.py
tools/: build_moshi_dataset_with_indexts.py  create_resume_jsonl.py  find_duplicates.py  generate_tars_data.py  generate_tars_synthetic_clips.py  generate_transcripts.py  make_voice_conditioning_tts.py  merge_manifests.py  prepare_voice_conditioning_audio.py  test_moshi_inference.py  test_tts_inference.py  verify_audio_content.py
(+9 files in other folders)
