[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.7"
clap = { version = "4.5.53", features = ["derive"] }
pyo3 = { version = "0.27.2", features = ["auto-initialize"] }
pyo3-asyncio = { version = "0.20.0", features = ["tokio-runtime"] }
reqwest = { version = "0.12.24", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
