[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.7"
clap = { version = "4.5.53", features = ["derive"] }
futures = "0.3.31"
pyo3 = { version = "0.27.2", features = ["auto-initialize"] }
reqwest = { version = "0.12.24", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
tower = "0.5.2"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
